--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Build and Push Image
 
 on:
   push:
@@ -7,19 +7,64 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  build-project:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    - name: Build and check coverage
-      run: mvn -B verify --file pom.xml
+      - name: Build and check coverage
+        run: mvn -B clean install --file pom.xml
+
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: target/petBuddy-backend-0.0.1-SNAPSHOT.jar
+        if: github.ref == 'refs/heads/main'
+
+  build-and-push-image:
+    runs-on: ubuntu-latest
+    needs: build-project
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Create target directory (if it doesn't exist)
+        run: mkdir -p target
+
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-jar
+
+      - name: Move JAR to Docker context
+        run: mv petBuddy-backend-0.0.1-SNAPSHOT.jar target/petBuddy-backend-0.0.1-SNAPSHOT.jar
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        id: push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: petbuddyzpi/petbuddy-backend:latest
